@@ -129,11 +129,11 @@
 # SIMTA_SMTP_HELO - helo hostname from remote host
 # SIMTA_MID - The incoming Message's MID as defined by it's header
 # SIMTA_WRITE_BEFORE_BANNER - The SMTP client wrote before the SMTP banner
-#    if this isnot set to 0
+#    if this is not set to 0
 # SIMTA_CHECKSUM - a message's checksum, if CHECKSUM_ALGORITHM is defined
 # SIMTA_CHECKSUM_SIZE - number of bytes of data read for a message's checksum
 #
-# The content filter can return one of four integer values:
+# The content filter can return one of the following integer values:
 # 0 - MESSAGE_ACCEPT
 # 1 - MESSAGE_ACCEPT_AND_DELETE
 # 2 - MESSAGE_REJECT
@@ -233,14 +233,6 @@
 # Size of backlog for incoming smtp connections.
 #
 #SMTP_LISTEN_BACKLOG		5
-
-# Give a "554 No SMTP service here" message to all inbound SMTP clients.
-#
-#SERVICE_SMTP_REFUSE
-
-# Disable incoming SMTP service.
-#
-#SERVICE_SMTP_OFF
 
 # Set maximum message size.  Default is 0, or unlimited.
 #
